# SAT_Parallel

./: .gitignore  CMakeLists.txt  README.md  RESEARCH_PLAN.md  TODO.md
benchmarks/: README.md
config/: default_params.yaml
docs/: DSRG_USAGE_SUMMARY.md  GPU_PROBER_INTEGRATION_PLAN.md  IMPL_DETAILS.md
scripts/: download_benchmarks.py  run_benchmark.py  run_experiment.sh  score.py  select_sample.py  setup_env.sh
src/: main.cpp
src/comm/: broadcast.h  delta_patch.h  gpu_channel.h  mpsc_queue.h
src/core/: aggregation.cpp  aggregation.h  centrality.cpp  centrality.h  dsrg.cpp  dsrg.h  dsrg_gc.cpp  dsrg_types.h
src/gpu/: gpu_prober.cu  gpu_prober.h  gpu_types.h  walksat_kernel.cu  walksat_kernel.cuh
src/master/: community.cpp  community.h  master.cpp  master.h  partitioner.cpp  partitioner.h  sharing_strategy.h  work_stealing.cpp  work_stealing.h
src/solver/: cadical_adapter.h  cnf_parser.h
src/worker/: local_weights.h  patch_builder.h  worker_engine.h
tests/comm/: comm_test.cpp
tests/core/: centrality_test.cpp  dsrg_bench.cpp  dsrg_test.cpp
tests/gpu/: gpu_test.cu
tests/master/: master_test.cpp
tests/worker/: worker_test.cpp
